<resources>
    <string name="app_name">MobileGlues</string>

    <string name="info_author" translatable="false">Swung, BZLZHH, Tungsten</string>
    <string name="info_copyright" translatable="false">Copyright © 2025 Swung0x48, BZLZHH, Tungsten. All rights reserved.\nLogo artwork kindly provided by Aou156.</string>
    <string name="info_launcher" translatable="false">Fold Craft Launcher (>=1.2.0.5)\nZalith Launcher (>=1.4.0)\nPojav Glow·Worm (>=20250211)</string>

    <string name="view_version">Version: </string>
    <string name="view_author">Author: </string>
    <string name="view_copyright">Copyright: </string>
    <string name="view_launcher">Compatible Launchers: </string>

    <string name="open_options">Modify renderer settings</string>

    <string name="clear_permission">Reset folder authorization</string>

    <string name="option_glsl_cache">Max glsl cache size (enter -1 to disable)</string>
    <string name="option_glsl_cache_helper">Unit: GigaByte (MB)</string>
    <string name="option_angle">Use ANGLE as OpenGL ES driver</string>
    <string name="option_angle_disable_if_possible">Disable if possible</string>
    <string name="option_angle_enable_if_possible">Enable if possible</string>
    <string name="option_angle_disable">Disable</string>
    <string name="option_angle_enable">Enable</string>

    <string name="option_glsl_cache_error_invalid">Error: invalid number.</string>
    <string name="option_glsl_cache_error_unexpected">Error: unexpected error.</string>
    <string name="option_glsl_cache_error_range">Error: number cannot be 0 or less than -1.</string>

    <string name="option_no_error">Error setting</string>
    <string name="option_no_error_auto">Auto</string>
    <string name="option_no_error_enable">Do not ignore</string>
    <string name="option_no_error_disable_pri">Ignore shader/program error</string>
    <string name="option_no_error_disable_sec">Ignore shader/program/framebuffer error</string>

    <string name="option_ext_gl43">Enable incomplete OpenGL43 extension</string>
    <string name="option_ext_cs">Enable incomplete ARB_compute_shader extension</string>

    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>

    <string name="dialog_info">App Info</string>

    <string name="dialog_permission_title">Info</string>
    <string name="dialog_permission_msg">Modifying rendering options requires read and write permissions. Please grant read and write permissions before modifying.</string>
    <string name="dialog_permission_msg_android_Q">Modifying rendering options requires read and write permissions. Please grant read and write permissions before making changes.\nYou will need to select this directory later: \n%s\nIf a folder named MG does not exist, please create one manually.</string>

    <string name="dialog_title_warning">Warning</string>
    <string name="warning_ext_gl43_enable">Enabling the incomplete OpenGL43 extension may cause issues with some shaders and mods. Are you sure you want to continue?</string>
    <string name="warning_ext_cs_enable">Enabling the incomplete ARB_compute_shader extension may cause issues with some shaders and mods. Are you sure you want to continue?</string>

    <string name="warning_adreno_740_angle">Enabling ANGLE on Adreno 740 devices is highly likely to cause severe rendering issues. Are you sure you want to continue?</string>

    <string name="warning_load_failed">Failed to load MG config!</string>
    <string name="warning_save_failed">Failed to save MG config!</string>
    <string name="warning_path_selection_error">Path error! Please select: \n%s\nbut you selected:\n%s</string>
</resources>