<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleCentered="true">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_img_btn"
            android:src="@drawable/outline_info_24" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        app:layout_constraintBottom_toTopOf="@+id/open_options">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/option_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_max_glsl_cache_size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/option_glsl_cache"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:layout_constraintBottom_toTopOf="@+id/text_option_angle"
                app:helperTextEnabled="true"
                app:helperText="@string/option_glsl_cache_helper"
                app:placeholderText="24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_max_glsl_cache_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_option_angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/option_angle"
                app:layout_constraintBottom_toTopOf="@+id/spinner_angle"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/text_option_no_error" />

            <TextView
                android:id="@+id/text_option_no_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/option_no_error"
                app:layout_constraintBottom_toTopOf="@+id/spinner_no_error"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner_no_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/switch_ext_gl43" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ext_gl43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_ext_gl43"
                app:layout_constraintBottom_toTopOf="@+id/switch_ext_cs" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ext_cs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_ext_cs"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/open_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/open_options"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
